# cpu-code

./: CMakeLists.txt  build_and_run.sh  compare_outputs.cpp  direct_convolution.cpp  main.cpp  output_direct.txt  output_gemm.txt  seed_generator.cpp
